--- a/app/views/components/_cards.html.erb
+++ b/app/views/components/_cards.html.erb
@@ -25,7 +25,7 @@
     <hr>
     <p>I build websites from scratch and enjoy telling a story on the screen</p>
     <p><strong>Languages I speak:</strong></p>
-    <p>Ruby, HTML, CSS, Javascript, React, SQL, Git</p>
+    <p>React, Javascript ES6, Ruby, HTML5, CSS3, PostgresSQL, Git</p>
     <p><strong>Dev Tools:</strong></p>
     <ul>
       <li>Rails</li>
