--- a/app/views/components/_cards.html.erb
+++ b/app/views/components/_cards.html.erb
@@ -44,7 +44,7 @@
     <hr>
     <p>I am lucky enough to be able to teach people about the ‘magic’ of technology every day</p>
     <p><strong>Topics I teach:</strong></p>
-    <p>Lean Startup, Innovation, Digital Leadership, Code, Data, Cyber</p>
+    <p>Lean Startup, Innovation, Digital Leadership, Code, Data</p>
 
     <p><strong>Experience:</strong></p>
     <ul>
