--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,6 +41,18 @@
     <div class="container-projects">
       <div class="projects">
         <div class="project-list">
+          <a href="https://irf-v1.herokuapp.com" target="_blank">
+            <div class="project-irf">
+                <i class="fas fa-chevron-right"></i>
+                <div class="project-details">
+                  <h1>IRF</h1>
+                  <div class="company-description">
+                    <p>Inpendent Research Forum</p>
+                  </div>
+                </div>
+            </div>
+          </a>
+
           <a href="https://www.flovelle.com" target="_blank">
             <div class="project-flovelle">
                 <i class="fas fa-chevron-right"></i>
