small edit on irf

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,7 @@
       <div class="projects">
         <div class="project-list">
           <a href="https://irf-v1.herokuapp.com" target="_blank">
-            <div class="project-irf">
+            <div class="project-flovelle">
                 <i class="fas fa-chevron-right"></i>
                 <div class="project-details">
                   <h1>IRF</h1>
